--- a/.gitignore
+++ b/.gitignore
@@ -57,10 +57,10 @@ user_profiles.json
 
 # Test outputs
 test_output/
-local.settings.json
 serviceAccountKey.json
 mybro-a1ea5-firebase-adminsdk-xxxx-xxxxxxxx.json
-*.json
+*.json 
+function/local.settings.json
 !host.json
 temp*
 
